🚸 Qol fixes, pad position is capped and overflow is hidden.

--- a/front_end/app/src/pages/game/solo/Game.css
+++ b/front_end/app/src/pages/game/solo/Game.css
@@ -6,6 +6,8 @@
 	right: 0px;
 	bottom: 0px;
 	margin: auto;
+
+	overflow: hidden;
 }
 
 .Pong-game > * {
